argocd/kustomized/longhorn/longhorn-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-auth-redirect
  namespace: longhorn
spec:
  forwardAuth:
    address: "https://auth.vasylchuk.org.ua?rd=https://longhorn.vasylchuk.org.ua"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`longhorn.vasylchuk.org.ua`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: longhorn-auth-redirect
          namespace: longhorn
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-auth-ingressroute
  namespace: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`longhorn.vasylchuk.org.ua`) && PathPrefix(`/oauth2/`)"
      kind: Rule
      middlewares:
        - name: auth-headers
          namespace: keycloak
      services:
        - name: oauth2-proxy
          namespace: keycloak
          port: 80
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-longhorn
  namespace: longhorn
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.vasylchuk.org.ua`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: noop-svc
          namespace: kube-system
          port: 80
